compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__imports__import_value_as_submodule_no_hint3.snap
---
source: compiler-core/src/type_/tests/imports.rs
expression: import some/other
---
error: Unknown module
  ┌─ /src/one/two.gleam:1:1
  │
1 │ import some/other
  │ ^^^^^^^^^^^^^^^^^ Did you mean `gleam`?

No module has been found with the name `some/other`.
